--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@lottiefiles/dotlottie-react": "^0.7.0",
     "add": "^2.0.6",
+    "lucide": "^0.400.0",
+    "lucide-react": "^0.400.0",
     "or": "^0.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
