--- a/package.json
+++ b/package.json
@@ -15,14 +15,19 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@lottiefiles/dotlottie-react": "^0.7.0",
     "add": "^2.0.6",
+    "framer-motion": "^11.5.4",
+    "gsap": "^3.12.5",
     "lucide": "^0.400.0",
     "lucide-react": "^0.400.0",
     "or": "^0.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-easy-emoji": "^1.8.1",
+    "react-intersection-observer": "^9.13.1",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^6.24.0",
     "react-scroll": "^1.9.0",
+    "react-scroll-motion": "^0.3.3",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "yarn": "^1.22.22"
